# ai-route-planner

./: .env.example  .gitignore  LICENSE  Procfile  README.md  pyproject.toml  railway.toml  requirements.txt  run_intent.py  run_pipeline.py  setup.sh
app/: main.py  schemas.py
docs/: ARCHITECTURE.md  FRONTEND.md  frontend_guide_for_C.md  frontend_map_guide.md
route_planner/: area_coords.py  graph.py  i18n.py  llm.py  node.py  state.py  user_memory.py
route_planner/data/: mock_poi.json  poi.csv  poi.db
route_planner/integrations/: amap_client.py
route_planner/nodes/: enrich.py  geo_cluster.py  intent.py  output.py  poi_search.py  refine.py  refine_select.py  route.py  weather.py
scripts/: fill_area_deepseek.py  fill_area_landmarks.py  fill_name_en_landmarks.py  migrate_hk_to_csv.py  migrate_to_sqlite.py  process_culture_csv.py  process_landmarks_csv.py  run_intent.py  run_pipeline.py  test_20cases.py  test_amap_client.py
src/route_planner/core/: graph.py  node.py  state.py
src/route_planner/llm/: client.py
src/route_planner/nodes/: enrich.py  intent.py  output.py  poi_search.py  route.py
