[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-route-planner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "openai>=1.0",
    "anthropic>=0.50",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["scripts*", "docs*"]
